# aocreate

./: Cargo.toml  README.md
src/: config.rs  creator.rs  input_gatherer.rs  main.rs
src/prefabs/: day.txt  main.txt
